# music-player

./: CMakeLists.txt  MusicPlayer.pro  README.md  assists.qrc  main.cpp  widget.cpp  widget.h  widget.ui
